# trabalhoprog3

./: CMakeLists.txt
include/: acoes.hpp  cicloBatalha.hpp  funcoesSetup.hpp  graphs.hpp  itens.hpp  menu.hpp  personagens.hpp  pokedex.hpp
src/: acoes.cpp  cicloBatalha.cpp  funcoesSetup.cpp  graphs.cpp  main.cpp  menu.cpp  personagens.cpp  pokedex.cpp  teste.cpp
